@@ -52,6 +52,11 @@ sqgetGlobalVar('delimiter', $delimiter,     SQ_SESSION);
 sqgetGlobalVar('composesession',    $composesession,    SQ_SESSION);
 sqgetGlobalVar('compose_messages',  $compose_messages,  SQ_SESSION);
 
+// compose_messages only useful in SESSION when a forward-as-attachment 
+// has been preconstructed for us and passed in via that mechanism; once 
+// we have it, we can clear it from the SESSION
+sqsession_unregister('compose_messages');
+
 /** SESSION/POST/GET VARS */
 sqgetGlobalVar('send', $send, SQ_POST);
 // Send can only be achieved by setting $_POST var. If Send = true then
@@ -103,7 +108,9 @@ sqgetGlobalVar('addr_search_done',      $html_addr_search_done, SQ_POST);
 sqgetGlobalVar('send_to_search',        $send_to_search,        SQ_POST);
 sqgetGlobalVar('do_delete',             $do_delete,             SQ_POST);
 sqgetGlobalVar('delete',                $delete,                SQ_POST);
-sqgetGlobalVar('restoremessages',       $restoremessages,       SQ_POST);
+sqgetGlobalVar('attachments',           $attachments,           SQ_POST);
+// Not used any more, but left for posterity
+//sqgetGlobalVar('restoremessages',       $restoremessages,       SQ_POST);
 if ( sqgetGlobalVar('return', $temp, SQ_POST) ) {
     $html_addr_search_done = 'Use Addresses';
 }
@@ -283,6 +290,7 @@ function getforwardHeader($orig_header) {
  * If the session is expired during a post this restores the compose session
  * vars.
  */
+$session_expired = false;
 if (sqsession_is_registered('session_expired_post')) {
     sqgetGlobalVar('session_expired_post', $session_expired_post, SQ_SESSION);
     /*
@@ -295,11 +303,12 @@ if (sqsession_is_registered('session_expired_post')) {
         session_write_close();
     } else {
         // these are the vars that we can set from the expired composed session
-        $compo_var_list = array ( 'send_to', 'send_to_cc','body','startMessage',
-            'passed_body','use_signature','signature','subject','newmail',
-            'send_to_bcc', 'passed_id', 'mailbox', 'from_htmladdr_search', 'identity',
-            'draft_id', 'delete_draft', 'mailprio', 'edit_as_new', 'compose_messsages',
-            'composesession', 'request_mdn', 'request_dr');
+        $compo_var_list = array ('send_to', 'send_to_cc', 'body', 'mailbox',
+            'startMessage', 'passed_body', 'use_signature', 'signature',
+            'attachments', 'subject', 'newmail', 'send_to_bcc', 'passed_id', 
+            'from_htmladdr_search', 'identity', 'draft_id', 'delete_draft', 
+            'mailprio', 'edit_as_new', 'request_mdn', 'request_dr', 
+            'composesession', /* Not used any more: 'compose_messsages', */);
 
         foreach ($compo_var_list as $var) {
             if ( isset($session_expired_post[$var]) && !isset($$var) ) {
@@ -307,9 +316,14 @@ if (sqsession_is_registered('session_expired_post')) {
             }
         }
 
-        $compose_messages = unserialize($restoremessages);
-        sqsession_register($compose_messages,'compose_messages');
+        if (!empty($attachments)) 
+            $attachments = unserialize($attachments);
+
+        // Not used any more, but left for posterity
+        //$compose_messages = unserialize($restoremessages);
+        //sqsession_register($compose_messages,'compose_messages');
         sqsession_register($composesession,'composesession');
+
         if (isset($send)) {
             unset($send);
         }
@@ -329,6 +343,7 @@ if (sqsession_is_registered('session_expired_post')) {
     showInputForm($session, false);
     exit();
 }
+
 if (!isset($composesession)) {
     $composesession = 0;
     sqsession_register(0,'composesession');
@@ -352,9 +367,19 @@ if (empty($compose_messages[$session])) {
     $composeMessage->reply_rfc822_header = '';
     $compose_messages[$session] = $composeMessage;
 
-    sqsession_register($compose_messages,'compose_messages');
+    // Not used any more, but left for posterity
+    //sqsession_register($compose_messages,'compose_messages');
 } else {
     $composeMessage=$compose_messages[$session];
+}
+
+// re-add attachments that were already in this message
+// FIXME: note that technically this is very bad form - 
+// should never directly manipulate an object like this
+if (!empty($attachments)) {
+    $attachments = unserialize($attachments);
+    if (!empty($attachments) && is_array($attachments))
+        $composeMessage->entities = $attachments;
 }
 
 if (!isset($mailbox) || $mailbox == '' || ($mailbox == 'None')) {
@@ -367,13 +392,14 @@ if ($draft) {
      * of language interface.
      */
     set_my_charset();
-    $composeMessage=$compose_messages[$session];
+    $composeMessage = $compose_messages[$session];
     if (! deliverMessage($composeMessage, true)) {
         showInputForm($session);
         exit();
     } else {
-        unset($compose_messages[$session]);
-        sqsession_register($compose_messages,'compose_messages');
+        // Not used any more, but left for posterity
+        //unset($compose_messages[$session]);
+        //sqsession_register($compose_messages,'compose_messages');
         $draft_message = _("Draft Email Saved");
         /* If this is a resumed draft, then delete the original */
         if(isset($delete_draft)) {
@@ -472,8 +498,9 @@ if ($send) {
             showInputForm($session);
             exit();
         }
-        unset($compose_messages[$session]);
-        sqsession_register($compose_messages,'compose_messages');
+        // Not used any more, but left for posterity
+        //unset($compose_messages[$session]);
+        //sqsession_register($compose_messages,'compose_messages');
 
         /* if it is resumed draft, delete draft message */
         if ( isset($delete_draft)) {
@@ -590,7 +617,8 @@ elseif (isset($sigappend)) {
         }
         $composeMessage->entities = $new_entities;
         $compose_messages[$session] = $composeMessage;
-        sqsession_register($compose_messages, 'compose_messages');
+        // Not used any more, but left for posterity
+        //sqsession_register($compose_messages, 'compose_messages');
     }
     showInputForm($session);
 } else {
@@ -869,7 +897,8 @@ function newMail ($mailbox='', $passed_id='', $passed_ent_id='', $action='', $se
                 break;
         }
         $compose_messages[$session] = $composeMessage;
-        sqsession_register($compose_messages, 'compose_messages');
+        // Not used any more, but left for posterity
+        //sqsession_register($compose_messages, 'compose_messages');
         session_write_close();
         sqimap_logout($imapConnection);
     }
@@ -978,7 +1007,8 @@ function getMessage_RFC822_Attachment($message, $composeMessage, $passed_id,
 }
 
 function showInputForm ($session, $values=false) {
-    global $send_to, $send_to_cc, $body, $startMessage,
+    global $send_to, $send_to_cc, $body, $startMessage, $attachments,
+        $session_expired,
         $passed_body, $color, $use_signature, $signature, $prefix_sig,
         $editor_size, $editor_height, $subject, $newmail,
         $use_javascript_addr_book, $send_to_bcc, $passed_id, $mailbox,
@@ -1169,6 +1199,12 @@ function showInputForm ($session, $values=false) {
             '   </tr>' . "\n";
     }
 
+    // composeMessage can be empty when coming from a restored session
+    if (is_object($composeMessage) && $composeMessage->entities) 
+        $attach_array = $composeMessage->entities;
+    if ($session_expired && !empty($attachments) && is_array($attachments))
+        $attach_array = $attachments;
+
     /* This code is for attachments */
     if ((bool) ini_get('file_uploads')) {
 
@@ -1215,9 +1251,8 @@ function showInputForm ($session, $values=false) {
         $s_a = array();
         global $username, $attachment_dir;
         $hashed_attachment_dir = getHashedDir($username, $attachment_dir);
-        // composeMessage can be empty when coming from a restored session
-        if (is_object($composeMessage) && $composeMessage->entities) {
-            foreach ($composeMessage->entities as $key => $attachment) {
+        if (!empty($attach_array)) {
+            foreach ($attach_array as $key => $attachment) {
                 $attached_file = $attachment->att_local_name;
                 if ($attachment->att_local_name || $attachment->body_part) {
                     $attached_filename = decodeHeader($attachment->mime_header->getParameter('name'));
@@ -1254,14 +1289,17 @@ function showInputForm ($session, $values=false) {
         addHidden('username', $username).
         addHidden('smaction', $action).
         addHidden('mailbox', $mailbox);
+    sqgetGlobalVar('QUERY_STRING', $queryString, SQ_SERVER);
     /*
        store the complete ComposeMessages array in a hidden input value
        so we can restore them in case of a session timeout.
      */
-    sqgetGlobalVar('QUERY_STRING', $queryString, SQ_SERVER);
-    echo addHidden('restoremessages', serialize($compose_messages)).
-        addHidden('composesession', $composesession).
+    // Not used any more, but left for posterity
+    //echo addHidden('restoremessages', serialize($compose_messages)).
+    echo addHidden('composesession', $composesession).
         addHidden('querystring', $queryString).
+        (!empty($attach_array) ?
+        addHidden('attachments', serialize($attach_array)) : '').
         "</form>\n";
     if (!(bool) ini_get('file_uploads')) {
         /* File uploads are off, so we didn't show that part of the form.
@@ -1386,7 +1424,8 @@ function saveAttachedFiles($session) {
     $name = $_FILES['attachfile']['name'];
     $message->initAttachment($type, $name, $localfilename);
     $compose_messages[$session] = $message;
-    sqsession_register($compose_messages , 'compose_messages');
+    // Not used any more, but left for posterity
+    //sqsession_register($compose_messages , 'compose_messages');
 }
 
 /* parse values like 8M and 2k into bytes */
